unpackaged/main/default/objects/joinapi__Step_Condition__c/joinapi__Step_Condition__c.object-meta.xml
<CustomObject>
    <description>This object is used to define the items and its attributes for the marketing and qualifying questions pages.</description>
    <label>Step Condition</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Step Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>