unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Button_Label__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Button_Label__c</fullName>
    <description>Defines the label for the button displayed for the item.</description>
    <inlineHelpText>Defines the label for the button displayed for the item.</inlineHelpText>
    <label>Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>