unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Description__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Description__c</fullName>
    <description>The description displayed for this item.</description>
    <inlineHelpText>The description displayed for this item.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>