unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Display_Name__c</fullName>
    <description>The name displayed to the end user on the marketing page.</description>
    <inlineHelpText>The name displayed to the end user on the marketing page.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>