unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Is_Default_Item__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Default_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies the item that will be selected for an item flow step if the user does not meet any of the dynamic item criteria.</description>
    <inlineHelpText>This field identifies the item that will be selected for an item flow step if the user does not meet any of the dynamic item criteria.</inlineHelpText>
    <label>Is Default Item</label>
    <type>Checkbox</type>
</CustomField>