unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Is_Marketing_Item__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Marketing_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies step condition as Marketing Item (Used in Marketing List)</description>
    <inlineHelpText>Identifies step condition as Marketing Item (Used in Marketing List)</inlineHelpText>
    <label>Is Marketing Item</label>
    <type>Checkbox</type>
</CustomField>