unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Is_Marketing_Item_Group__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Marketing_Item_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** Identifies this step condition as Item Group (Used in Marketing List)</description>
    <inlineHelpText>** System Calculated ** Identifies this step condition as Item Group (Used in Marketing List)</inlineHelpText>
    <label>Is Marketing Item Group</label>
    <type>Checkbox</type>
</CustomField>