unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this the item is visible to end users.</description>
    <inlineHelpText>When checked this the item is visible to end users.</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>