unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Item__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the item for the related step.</description>
    <inlineHelpText>Defines the item for the related step.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Step Conditions</relationshipLabel>
    <relationshipName>Step_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>