unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Item_Badge_Types_Filter__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Item_Badge_Types_Filter__c</fullName>
    <description>User defined badge types.</description>
    <inlineHelpText>User defined badge types.</inlineHelpText>
    <label>Item Badge Types Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>