unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Item_Criteria__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Item_Criteria__c</fullName>
    <description>** SYSTEM ** This field is used to define the criteria used to direct the end user to an item.</description>
    <inlineHelpText>** SYSTEM ** This field is used to define the criteria used to direct the end user to an item.</inlineHelpText>
    <label>Item Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>