unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Item_Group__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Item_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Linked to the Item Group for this Item</description>
    <inlineHelpText>** System Calculated ** Linked to the Item Group for this Item</inlineHelpText>
    <label>Item Group</label>
    <referenceTo>joinapi__Step_Condition__c</referenceTo>
    <relationshipLabel>Step Conditions</relationshipLabel>
    <relationshipName>Step_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>