unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Item_Group_Header__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Item_Group_Header__c</fullName>
    <description>Displays Item grouping header. See front end logic.</description>
    <inlineHelpText>Displays Item grouping header. See front end logic.</inlineHelpText>
    <label>Item Group Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>