unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Next_Step__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Next_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the step that is redirected after you choose this item</description>
    <inlineHelpText>This is the step that is redirected after you choose this item</inlineHelpText>
    <label>Next Step</label>
    <referenceTo>joinapi__Step__c</referenceTo>
    <relationshipLabel>Step Conditions (Next Step)</relationshipLabel>
    <relationshipName>Step_Conditions1</relationshipName>
    <type>Lookup</type>
</CustomField>