unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Order__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Order__c</fullName>
    <description>Defines the order items are displayed for marketing steps.</description>
    <inlineHelpText>Defines the order items are displayed for marketing steps.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>