unpackaged/main/default/objects/joinapi__Step_Condition__c/fields/joinapi__Step__c.field-meta.xml
<CustomField>
    <fullName>joinapi__Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the step condition to a step.</description>
    <inlineHelpText>Relates the step condition to a step.</inlineHelpText>
    <label>Step</label>
    <referenceTo>joinapi__Step__c</referenceTo>
    <relationshipLabel>Step Conditions</relationshipLabel>
    <relationshipName>Step_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>