unpackaged/main/default/objects/joinapi__Step_Condition__c/listViews/joinapi__All.listView-meta.xml
<ListView>
    <fullName>joinapi__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>